# rosneuro_acquisition_lsl

./: CMakeLists.txt  README.md  package.xml  plugin_lsl.xml
include/rosneuro_acquisition_lsl/: LSLDevice.hpp
src/: LSLDevice.cpp
